# app/models/message/Message_Model.go
@@ -1,9 +1,11 @@
 package message_model
 
 type MessageData struct {
-	Title   string `json:"Title" example:"Test"`
-	Subtile string `json:"Subtile" example:"Subtile"`
-	Detail  string `json:"Detail" example:"Detail"`
+	Userselect []string `json:"Userselect" example:"user1@example.com,user2@example.com"`
+	IsAllUser  bool     `json:"IsAllUser" example:"false"`
+	Title      string   `json:"Title" example:"Test"`
+	Subtile    string   `json:"Subtile" example:"Subtile"`
+	Detail     string   `json:"Detail" example:"Detail"`
 }
 
 type MessageRequest struct {
