# docs/swagger.json
@@ -299,6 +299,10 @@
                     "type": "string",
                     "example": "Detail"
                 },
+                "IsAllUser": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "Subtile": {
                     "type": "string",
                     "example": "Subtile"
@@ -306,6 +310,16 @@
                 "Title": {
                     "type": "string",
                     "example": "Test"
+                },
+                "Userselect": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "user1@example.com",
+                        "user2@example.com"
+                    ]
                 }
             }
         },
@@ -330,8 +344,9 @@
         "model.RequestMessage": {
             "type": "object",
             "properties": {
-                "message": {
-                    "type": "string"
+                "Message": {
+                    "type": "string",
+                    "example": "message"
                 }
             }
         }
